2008-04-22  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gtk-engines and libgtop branched.
	* people.xml.in:
	* translation-teams.xml.in: Leonardo Fontenelle is the new pt_BR Team
	coordinator.

2008-04-21  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-themes branched for 2.22.
	* people.xml.in: Added Richard Hugues.

2008-04-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-desktop, gnome-menus, gnome-panel and libwnck
	branched for 2.22.

2008-04-15  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: libgweather branched for 2.22.

2008-04-13  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: sound-juicer and libgnomekbd branched for 2.22.

2008-04-11  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: evince branched for 2.22.

2008-04-10  Johannes Schmid <jhs@gnome.org>

	* releases.xml.in:
	* gnome-modules.xml.in:
	libgnome branched for gnome-2-22

2008-04-09  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: gail is no more an individual module in 2.24.

2008-04-09  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: New Balochi Team.
	* releases.xml.in: Added GNOME 2.24 release.

2008-04-07  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: gnome-utils shipped 2-20 branch in GNOME 2.22.

2008-04-04  Jordi Mallach  <jordi@sindominio.net>

	* translation-teams.xml.in: Add "ca@valencia" as a new id for
	the Catalan team.

2008-04-04  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Unsetting meld docs path because it is not
	gnome-doc-utils compliant.
	* releases.xml.in: Added new module policykit-gnome.

2008-04-02  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: seahorse branched for 2.22.
	Changed comment (link to TP) for freedesktop modules.