@@ -943,4 +943,10 @@
     <email>chesmaster@gmail.com</email>
     <bugzilla-account>chesmaster@gmail.com</bugzilla-account>
   </person>
+  <!-- crh translation coordinator -->
+  <person id="x-reshat">
+    <name>Reşat Sabiq</name>
+    <email>tatar.iqtelif.i18n@gmail.com</email>
+    <bugzilla-account>tatar.iqtelif.i18n@gmail.com</bugzilla-account>
+  </person>
 </people>
