@@ -616,6 +616,10 @@
     <coordinator id="x-christopherfynn"/>
     <webpage>http://iris.lib.virginia.edu/tibet/tools/linux/gui/gnome/</webpage>
   </team>
+  <team id="crh">
+    <_language id="bo">Crimean Tatar</_language>
+    <coordinator id="x-reshat"/>
+  </team>
   <team id="ti">
     <_language id="ti">Tigrinya</_language>
     <coordinator id="x-simonmebrahtu"/>
