@@ -1,3 +1,10 @@
+2008-04-28  Johannes Schmid <jhs@gnome.org>
+
+	* translation-teams.xml.in
+	* people.xml.in:
+
+	Added team for Crimean Tatar
+
 2008-04-22  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
